# route-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  find_gravel_roads.py  pyproject.toml
docs/: README.md  index.html
gravel_roads/: __init__.py  osm_query.py  scoring.py  storage.py  visualization.py
output/wroclaw/: gravel_roads.csv  gravel_roads.geojson
