[tool.poetry]
package-mode = false

[project]
name = "route-generator"
version = "0.4.0"
description = "Tools for generating, analyzing, and modifying cycling routes (GPX and FIT files)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "gpxpy>=1.5.0",
    "requests>=2.31.0",
    "overpy>=0.7.0",
    "folium>=0.15.0",
    "geojson>=3.1.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
fit = [
    "fitdecode>=0.10.0",
    "fit-tool>=0.9.0",
]
satellite = [
    "pystac-client>=0.7.0",
    "planetary-computer>=1.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
